src/styles/antd-overrides/collapse.scss
.ant-collapse {
  background: var(--background-l0);
  border-color: var(--stroke-secondary);

  .ant-collapse-item {
    border-color: var(--stroke-secondary);

    .ant-collapse-header {
      font-weight: 500;
      color: var(--text-header);
    }
  }

  .ant-collapse-content,
  .ant-collapse-content-box {
    background-color: transparent;
    border: none;
    color: var(--text-primary);
  }
}

.ant-collapse.minimal {
  .ant-collapse-content-box {
    padding-left: 0;
    padding-right: 0;
  }

  .ant-collapse-header {
    display: flex;
    align-items: center;
    padding-right: 0;
    padding-left: 0;
    width: 100%;

    .ant-collapse-arrow {
      left: 0;
    }
  }
}

// Top Nav Select
// Right side of the top nav
.top-nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: var(--background-l0);

  .nav-menu-item {
    cursor: pointer;
    display: flex;
    align-items: center;
    font-weight: 600;
    color: var(--text-primary) !important;
  }

  // Resources dropdown and options (dotdotdot) menu
  .ant-collapse-header {
    color: var(--text-primary) !important;
    padding-bottom: 8px !important;
  }

  .ant-collapse-content {
    float: right;
    margin-right: 21px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding: 10px 2px;
    background-color: var(--background-l0);
    border-radius: 2px;
  }
  .ant-collapse-content-box {
    border: 1px solid var(--stroke-tertiary);
    box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.1);
    padding: 0;
    width: 100%;
    background-color: var(--background-l0);
  }
  .ant-collapse-content-box.dark {
    box-shadow: 0px 8px 12px #000000;
  }
  .ant-select-arrow {
    display: none;
  }
}

.ant-collapse-content-inactive {
  display: none;
}

.top-nav-mobile {
  padding: 16px 8px;
  width: 100%;
  position: fixed;
  .ant-collapse {
    width: 100%;
    margin-bottom: 4px;
    height: 55px;
  }
  .ant-collapse-content {
    float: left;
    padding-right: 10px;
    padding-left: 10px;
    width: 100%;
  }
  .ant-collapse-content-box {
    display: flex;
    flex-direction: column;
    z-index: 1000;
    margin-top: -2px;
    padding: 7px 0 15px;
    border: none;
    border-bottom: 1px solid var(--stroke-secondary);
  }
  .nav-menu-item {
    padding: 10px 15px;
  }

  .nav-subsection {
    padding-left: 15px;
    height: 110px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    > div {
      display: flex;
      align-items: center;
    }
  }
  .theme-picker {
    justify-content: flex-start;
  }
  .account-badge {
    margin: auto !important;
    margin-top: 22px !important;
  }
  .resources-dropdown .ant-collapse-content-box {
    padding: 0 6px;
    margin-left: 25px;
    border: none;
    box-shadow: none;
    a {
      height: 40px;
    }
  }
}

// Logo and links
.top-left-nav {
  flex: 1;
  position: absolute;
}

// Dotdotdot menu and wallet/balance
.top-right-nav {
  display: flex;
  align-items: center;
  position: absolute;
  right: 50px;
  margin-right: 10px;
}

.theme-picker {
  display: flex;
  align-items: center;
  cursor: pointer;
  justify-content: 'space-evenly';
}

// Dotdotdot menu in top right
.top-nav-options {
  .ant-collapse {
    width: 110px;
    text-align: right;
    margin-right: -10px;
  }
  .ant-collapse-content {
    width: 170px;
    margin-right: -22px;
  }
}

.projects-filter-collapse .ant-collapse-content {
  position: absolute;
  z-index: 999;
  background-color: var(--background-l0);
  width: 180px;
  box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.1);

  .ant-collapse-content-box {
    padding-top: 8px;
    padding-bottom: 8px;
  }
}

.projects-filter-collapse.dark .ant-collapse-content {
  background-color: var(--background-l1);
  box-shadow: 0px 8px 12px #000000;
}

// Trending window days selector on trending projects section of homepage
.trending-window-select {
  background: none;
  .ant-collapse-header {
    font-size: 22px;
    font-weight: 600 !important;
    color: var(--text-header) !important;
    min-width: 80px;
    text-decoration: underline;
  }

  .ant-collapse-content {
    position: absolute;
    background: var(--background-l0);
    z-index: 999;
    margin-left: 10px;
    box-shadow: 0px 8px 12px rgb(0 0 0 / 10%);
    width: 114px;
  }
  .ant-collapse-content-box {
    padding: 0;
  }
  .select-item {
    font-weight: 500;
    font-size: 16px;
    padding: 10px 15px;
    cursor: pointer;
  }
}

